# RigidSolver

./: .gitignore  CMakeLists.txt  Makefile  OBJ_Loader.h  README.md  README.txt  RigidSolver.cpp  RigidSolver.h  Rigidsolver.sln  Rigidsolver.vcxproj  Rigidsolver.vcxproj.filters  SolverGrid.cpp  SolverGrid.h  SolverModel.cpp  SolverModel.h  TODO.txt  index_test.py  packages.config  voxelIndex.py
resources/: beauty.frag  beauty.vert  collision.frag  collision.vert  collisionGrid.frag  collisionGrid.geom  collisionGrid.vert  common.fncs  depthPeeling.frag  depthPeeling.vert  depthPeelingEval.frag  depthPeelingEval.vert  momenta.frag  momenta.vert  particleValues.frag  particleValues.geom  particleValues.vert  solver.frag  solver.vert
